# hermes-xmemo-plugin

./: .gitignore  LICENSE  README.md  install-remote.sh  install.sh  pyproject.toml
.github/workflows/: pypi-publish.yml
src/hermes_xmemo/: __init__.py  __main__.py  cli.py  install.py
src/hermes_xmemo/xmemo/: README.md  __init__.py  cache.py  cli.py  client.py  config.py  plugin.yaml
tests/: test_config_credentials.py  test_p0_reliability.py  test_p1_cache.py  test_p1_cache_db.py
xmemo/: README.md
