[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-xmemo"
dynamic = ["version"]
description = "XMemo memory provider plugin for Hermes Agent — durable, identity-aware cross-session memory with semantic search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "XMemo"},
]
keywords = [
    "hermes",
    "hermes-agent",
    "agent",
    "memory",
    "memory-provider",
    "long-term-memory",
    "semantic-memory",
    "cloud-memory",
    "cross-agent-memory",
    "chatgpt-memory",
    "shared-ai-memory",
    "hermes-agent-memory",
    "xmemo",
    "plugin",
    "context",
    "ai-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
hermes-xmemo = "hermes_xmemo.cli:main"

[project.urls]
Homepage = "https://github.com/yonro/hermes-xmemo-plugin"
Repository = "https://github.com/yonro/hermes-xmemo-plugin"
Issues = "https://github.com/yonro/hermes-xmemo-plugin/issues"
XMemo = "https://xmemo.dev"
"XMemo Agent Discovery" = "https://xmemo.dev/.well-known/agent-discovery.json"
"XMemo Hermes Config" = "https://xmemo.dev/v1/mcp/config/hermes"
"XMemo MCP Fallback" = "https://xmemo.dev/mcp"

[tool.xmemo]
role = "hermes_memory_provider"
recommended_mode = "hermes_plugin_preferred"
service_url = "https://xmemo.dev"
agent_discovery = "https://xmemo.dev/.well-known/agent-discovery.json"
hermes_config = "https://xmemo.dev/v1/mcp/config/hermes"
mcp_fallback = "https://xmemo.dev/mcp"
chatgpt_connection = "https://xmemo.dev/mcp"
plugin_repository = "https://github.com/yonro/hermes-xmemo-plugin"
token_in_metadata = false
official_marketplace_claim = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_xmemo = ["xmemo/*", "xmemo/**/*"]

[tool.setuptools_scm]
write_to = "src/hermes_xmemo/_version.py"
fallback_version = "0.0.0+unknown"
